--- a/posto/posto/Base.lproj/Main.storyboard
+++ b/posto/posto/Base.lproj/Main.storyboard
@@ -202,7 +202,7 @@
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
-                                            <segue destination="e9e-BC-kUm" kind="show" id="IcR-9j-t2D"/>
+                                            <segue destination="frC-hj-kNo" kind="show" id="Ioq-XN-wLO"/>
                                         </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gas_station" translatesAutoresizingMaskIntoConstraints="NO" id="BuJ-pz-etV">
@@ -312,22 +312,6 @@
             </objects>
             <point key="canvasLocation" x="1565.25" y="1811.5"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="wsA-cF-eJh">
-            <objects>
-                <navigationController id="e9e-BC-kUm" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VLh-2C-86N">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="frC-hj-kNo" kind="relationship" relationship="rootViewController" id="Vh4-cz-mRs"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9X5-0m-exf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1575.75" y="885.5"/>
-        </scene>
         <!--Gas View Controller-->
         <scene sceneID="tJJ-9g-vna">
             <objects>
@@ -346,59 +330,81 @@
                                     <navigationItem title="Etanol X Gasolina" id="GOv-fY-YZz">
                                         <barButtonItem key="leftBarButtonItem" title="Voltar" id="Msf-UA-YNb">
                                             <connections>
-                                                <segue destination="T0v-Ue-WXt" kind="unwind" unwindAction="returnToMenu:" id="Lld-BV-ux6"/>
+                                                <segue destination="T0v-Ue-WXt" kind="unwind" unwindAction="returnToMenu:" id="b4r-7R-6h8"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gasolina" translatesAutoresizingMaskIntoConstraints="NO" id="0tQ-47-UF4">
-                                <rect key="frame" x="0.0" y="241" width="511" height="496"/>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gas_station1" translatesAutoresizingMaskIntoConstraints="NO" id="oZP-2V-pgA">
                                 <rect key="frame" x="24" y="116" width="137" height="96"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="116" width="174" height="125"/>
+                                </variation>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gmk-Bf-k6f">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.000" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gmk-Bf-k6f">
                                 <rect key="frame" x="79" y="123" width="61" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="81" y="123" width="61" height="30"/>
+                                    <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="20"/>
+                                    <rect key="frame" x="90" y="130" width="71" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="textFieldSelected:" destination="frC-hj-kNo" eventType="touchUpInside" id="2xe-tY-lda"/>
+                                    <action selector="textFieldUpInside:" destination="frC-hj-kNo" eventType="touchUpInside" id="kdR-H5-Dh4"/>
+                                    <outlet property="delegate" destination="frC-hj-kNo" id="3vb-gB-fnh"/>
+                                </connections>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gas_station" translatesAutoresizingMaskIntoConstraints="NO" id="HqS-Cs-O64">
                                 <rect key="frame" x="214" y="116" width="137" height="96"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="191" y="116" width="168" height="125"/>
+                                </variation>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kPA-jp-vMb">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.000" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kPA-jp-vMb">
                                 <rect key="frame" x="234" y="123" width="59" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="20"/>
+                                    <rect key="frame" x="219" y="130" width="67" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="textFieldUpInside:" destination="frC-hj-kNo" eventType="editingDidEnd" id="wbE-jS-gDl"/>
+                                    <outlet property="delegate" destination="frC-hj-kNo" id="5CJ-Yk-zGO"/>
+                                </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfO-hw-zk7">
-                                <rect key="frame" x="254" y="161" width="18" height="34"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ETANOL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10d-gF-dQZ">
                                 <rect key="frame" x="61" y="212" width="100" height="21"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="20"/>
                                 <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="61" y="243" width="129" height="21"/>
+                                </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GASOLINA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LsU-rg-nq4">
                                 <rect key="frame" x="214" y="212" width="100" height="21"/>
                                 <color key="backgroundColor" red="0.96870988609999997" green="0.77573884709999996" blue="0.107850476" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="20"/>
                                 <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="191" y="243" width="123" height="21"/>
+                                </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2SP-wo-7az">
                                 <rect key="frame" x="117" y="268" width="140" height="131"/>
                                 <state key="normal" backgroundImage="velocimetro1">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="103" y="272" width="169" height="166"/>
+                                </variation>
                                 <connections>
                                     <action selector="buttonCalculate:" destination="frC-hj-kNo" eventType="touchUpInside" id="gEG-CT-ehL"/>
                                 </connections>
@@ -408,22 +414,43 @@
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ztz-we-89W">
-                                <rect key="frame" x="38" y="584" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="49" y="247" width="294" height="21"/>
+                                    <rect key="frame" x="117" y="182" width="18" height="34"/>
                                 </variation>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TfO-hw-zk7">
+                                <rect key="frame" x="254" y="161" width="18" height="34"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="243" y="180" width="18" height="34"/>
+                                </variation>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Digite os valores em R$ nas bombas acima e clique em CALCULAR para saber qual combustível é mais viável." textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="Ugm-da-TYi">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="61" y="454" width="253" height="128"/>
+                                </variation>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="Ugm-da-TYi"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="Ugm-da-TYi"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="I3H-R5-0ng"/>
                     <connections>
-                        <outlet property="labelResult" destination="Ztz-we-89W" id="S3B-C7-mkw"/>
+                        <outlet property="labelResult" destination="Ugm-da-TYi" id="eNQ-9m-RGd"/>
                         <outlet property="textGasValue" destination="kPA-jp-vMb" id="drG-90-GMi"/>
                         <outlet property="textGnvOrEtnValue" destination="Gmk-Bf-k6f" id="KRF-xr-Hie"/>
                     </connections>
@@ -431,14 +458,13 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zFx-XL-hXW" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="T0v-Ue-WXt" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2291.25" y="885.5"/>
+            <point key="canvasLocation" x="1583.25" y="830.5"/>
         </scene>
     </scenes>
     <resources>
         <image name="Car" width="300" height="251"/>
         <image name="gas_station" width="256" height="256"/>
         <image name="gas_station1" width="512" height="512"/>
-        <image name="gasolina" width="600" height="400"/>
         <image name="tools" width="256" height="256"/>
         <image name="velocimetro1" width="500" height="500"/>
     </resources>
